--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,26 +13,23 @@
     <string name="play_surprise">Play Surprise</string>
 
     <!-- Used for instruction layouts -->
-    <string name="object_of_game">Object of the game: \nCorrectly repeat a longer and longer\n sequence of signals</string>
+    <string name="object_of_game">Object of the game: \nCorrectly repeat a longer and \nlonger sequence of signals</string>
     <string name="classic_instructions">
         The game will give the first signal. Repeat the signal by pressing the same color.\n\n
         The game will duplicate the first signal and then add one.\n\n Repeat these two signals by pressing the same colors, in order.\n\n
         The game continues to repeat the same pattern and adds another signal every time you correctly repeat the pattern.\n\n
-        After the 5th, 9th and 13th signals in a sequence, the game automatically speeds up.\n\n
-       If you fail to repeat a sequence exactly, or if you take more than 5 seconds to repeat a signal, you lose.</string>
+        If you fail to repeat a sequence exactly, you lose.</string>
     <string name="rewind_instructions">
         The game will give the first signal. Repeat the signal by pressing the same color.\n\n
-        The game will duplicate the first signal and then add one.\n\n Repeat these two signals by repeating the sequence backwards.\n\n
+        The game will duplicate the first signal and then add one.\n\n Repeat these two signals by repeating the sequence BACKWARDS.\n\n
         The game continues to repeat the same pattern and adds another signal every time you correctly repeat the pattern in reverse order.\n\n
-        After the 5th, 9th and 13th signals in a sequence, the game automatically speeds up.\n\n
-       If you fail to repeat a sequence exactly, or if you take more than 5 seconds to repeat a signal, you lose.</string>
+        If you fail to repeat a sequence exactly, you lose.</string>
     <string name="surprise_instructions">
         In this game, every button has the same color and sound. You must remember the pattern by location only.
         The game will give the first signal. Repeat the signal by pressing the same button.\n\n
         The game will duplicate the first signal and then add one. Repeat these two signals by tapping the same buttons in order.\n\n
         The game continues to repeat the same pattern and adds another signal every time you correctly repeat the pattern.\n\n
-        After the 5th, 9th and 13th signals in a sequence, the game automatically speeds up.\n\n
-       If you fail to repeat a sequence exactly, or if you take more than 5 seconds to repeat a signal, you lose.</string>
+        If you fail to repeat a sequence exactly, you lose.</string>
 
     <!-- Image Content Descriptions -->
     <string name="ls_masters_logo">LightShow Masters Logo</string>
